--- a/styles.css
+++ b/styles.css
@@ -1,31 +1,61 @@
-body {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
+* {
     margin: 0;
+    padding: 0;
 }
 
-.grid-container{
+body {
+    background-color: aliceblue;
+}
+
+.grid-container {
     display: flex;
     flex-wrap: wrap;
-    width: 512px;
-    height: 512px;
+    background-color: white;
+    margin: 100px auto 0 auto;
+}
+
+.cell {
+    background-color: aquamarine;
+    border: 1px solid whitesmoke;
+}
+
+#slider-container {
     margin: 0 auto;
-    align-items: center;
-    border: 1px solid black;
 }
 
-.grid-item {
-    width: 30px;
-    height: 30px;
-    margin: 1px;
-    border: 1px solid lightgray;
-    box-sizing: border-box; /* Учитывать границу в размере элемента */
-    transition: background-color 0.3s ease; /* Плавное изменение цвета фона */
+.slider {
+    -webkit-appearance: none;
+    appearance: none;
+    height: 25px;
+    width: 100%;
+    background: rgba(200, 255, 238, 0.7);
+    outline: none;
+    opacity: 0.7;
+    -webkit-transition: .2s;
+    transition: opacity .2s;
 }
 
-.grid-item.hovered {
-    background-color: #4CAF50;
+#slider-value {
+    margin: 0 auto;
+    text-align: center;
 }
 
+.slider:hover {
+    opacity: 1;
+}
+
+.slider::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 25px;
+    height: 25px;
+    background: #04AA6D;
+    cursor: pointer;
+}
+
+.slider::-moz-range-thumb {
+    width: 25px;
+    height: 25px;
+    background: #04AA6D;
+    cursor: pointer;
+}
